# Netmon

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  __main__.py  capture.py  database.py  layout.py  models.py  utils.py
src/assets/: style.css
