[project]
name = "netmon"
version = "0.1.0"
description = ""
authors = [
  { name = "adikpb", email = "67222969+adikpb@users.noreply.github.com" },
]
requires-python = ">=3.12,<4"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "chardet (>=5.2.0,<6.0.0)",
  "dash (>=2.18.2,<3.0.0)",
  "dotenv>=0.9.9",
  "pandas (>=2.2.3,<3.0.0)",
  "plotly (>=6.0.0,<7.0.0)",
  "scapy (>=2.6.1,<3.0.0)",
  "sqlalchemy>=2.0.40",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
